--- a/src/styles/themes/default.scss
+++ b/src/styles/themes/default.scss
@@ -67,6 +67,17 @@ $primary-color: #919292;
   border-bottom: 1px solid $primary-color;
 }
 
+.botui-actions-datepicker-input {
+  border: 0;
+  outline: none;
+  border-radius: 0;
+  padding: 5px 7px;
+  font-family: $font-family;
+  background-color: transparent;
+  color: darken($primary-color, 22%);
+  border-bottom: 1px solid $primary-color;
+}
+
 .botui-actions-text-submit {
   color: #fff;
   width: 30px;
